--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
               </li>
               <li>
-                <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-external-link fa-fw"></i> <span class="network-name">Blog</span></a>
+                <a href="http://blog.yasmymrodrigues.com" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-external-link fa-fw"></i> <span class="network-name">Blog</span></a>
               </li>
             </ul>
             <hr>
