--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <hr>
             <ul class="list-inline intro-social-buttons">
               <li>
-                <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                <a href="https://twitter.com/YasmymRodriguesN" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
               </li>
               <li>
                 <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-medium fa-fw"></i> <span class="network-name">Medium</span></a>
