--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="intro-message">
             <img class="img-circle center-block" src="img/yasmymrodrigues.jpg" width="150" alt="">
             <h1>Yasmym Rodrigues</h1>
-            <h3>Software Engineer | Computer Engineering Student | Developer</h3>
+            <h3>Software Engineer | Computer Engineering Student | Web Developer</h3>
             <hr>
             <ul class="list-inline intro-social-buttons">
               <li>
