--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<img src="images.unsplash.com/photo-1428908728789-d2de25dbd4e2?dpr=1&auto=compress,format&fit=crop&w=1950&h=&q=80&cs=tinysrgb&crop=" id="bg" alt="">
+<img src="img/sky.jpg" id="bg" alt="">
 <head>
 
   <meta charset="utf-8">
