--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <img src="img/Sky.jpg" id="bg" alt="">
+    <img src="/img/sky.jpg" id="bg" alt="">
 <head>
 
   <meta charset="utf-8">
