--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <img src="/img/sky.jpg" id="bg" alt="">
+    <img src="/img/space.jpg" id="bg" alt="">
 <head>
 
   <meta charset="utf-8">
@@ -46,7 +46,7 @@
                   <a href="http://blog.yasmymrodrigues.com" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-external-link fa-fw"></i> <span class="network-name">Blog</span></a>
                  </li>
               <li>
-                  <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-medium fa-fw"></i> <span class="network-name">Medium</span></a>
+                  <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-gosh fa-fw"></i> <span class="network-name">Medium</span></a>
                 </li>
               <li>
                 <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">YouTube</span></a>
