Change icons and color font
Change icons and color font

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <a href="http://blog.yasmymrodrigues.com" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-external-link fa-fw"></i> <span class="network-name">Blog</span></a>
                  </li>
               <li>
-                  <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-gosh fa-fw"></i> <span class="network-name">Medium</span></a>
+                  <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-gosht fa-fw"></i> <span class="network-name">Gosht</span></a>
                 </li>
               <li>
                 <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">YouTube</span></a>
