Change font and background image
Change font and background image

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <img src="/img/glen-carrie-2092.jpg" id="bg" alt="">
+    <img src="/img/daniel-cheung-129839.jpg" id="bg" alt="">
 <head>
 
   <meta charset="utf-8">
@@ -67,7 +67,7 @@
     <!-- /.container -->
 <div class="row">
     <div class="col-md-12" text-align="center">
-        <h4>I am a Brazilian self-taught software developer working independently with web and mobile application development.</h4>
+        <h4>[Creating and Evolving new perceptions]</h4>
     </div>
 </div>
   </div>
