--- a/index.html
+++ b/index.html
@@ -36,26 +36,20 @@
           <div class="intro-message">
             <img class="img-circle center-block" src="img/yasmymrodrigues.jpg" width="150" alt="">
             <h1>Yasmym Rodrigues</h1>
-            <h3>Software Engineer | Computer Engineering Student | Web Developer</h3>
+            <h3>Software Development | Computer Engineering | Robotics</h3>
             <hr>
             <ul class="list-inline intro-social-buttons">
               <li>
+                  <a href="https://blog.yasmymrodrigues.com" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-external-link fa-fw"></i> <span class="network-name">Blog</span></a>
+              </li>
+              <li>
                   <a href="https://github.com/YasmymRodrigues" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-github fa-fw"></i> <span class="network-name">GitHub</span></a>
+              </li>              
+              <li>
+                <a href="https://www.linkedin.com/in/nayara-yasmym-rodrigues-a9096192/" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
               </li>
               <li>
-                  <a href="http://blog.yasmymrodrigues.com" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-external-link fa-fw"></i> <span class="network-name">Blog</span></a>
-                 </li>
-              <li>
-                <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">YouTube</span></a>
-              </li>
-              <li>
-                <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
-              </li>
-              <li>
-                <a href="#" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-              </li>
-              <li>
-                  <a href="https://twitter.com/YasmymRodriguesN" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                 <a href="https://twitter.com/YasmymRodriguesN" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
               </li>
             </ul>
             <hr>
@@ -67,7 +61,6 @@
     <!-- /.container -->
 <div class="row">
     <div class="col-md-12" text-align="center">
-        <h4>[Creating and Evolving new perceptions]</h4>
     </div>
 </div>
   </div>
