--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <img src="/img/php1K8ZK1PM.jpg" id="bg" alt="">
+    <img src="/img/space.jpg" id="bg" alt="">
 <head>
 
   <meta charset="utf-8">
@@ -36,7 +36,7 @@
           <div class="intro-message">
             <img class="img-circle center-block" src="img/yasmymrodrigues.jpg" width="150" alt="">
             <h1>Yasmym Rodrigues</h1>
-            <h3>Software Development | Computer Engineering | Robotics</h3>
+            <h3>Software Development | Robotics | Computer Engineering</h3>
             <hr>
             <ul class="list-inline intro-social-buttons">
               <li>
