Change the Twitter link
Change the Twitter link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="https://www.linkedin.com/in/nayara-yasmym-rodrigues-a9096192/" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
               </li>
               <li>
-                 <a href="https://twitter.com/YasmymRodriguesN" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                 <a href="https://twitter.com/YasmymRdgs" target="_blank" class="btn btn-default btn-sm"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
               </li>
             </ul>
             <hr>
