Change color font
Change color font

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="col-lg-12">
           <div class="intro-message">
             <img class="img-circle center-block" src="img/yasmymrodrigues.jpg" width="150" alt="">
-            <h1 style= color: "white">Yasmym Rodrigues</h1>
-            <h3 style= color: "white">Software Development | Robotics | Computer Engineering</h3>
+            <h1 style= "color: white">Yasmym Rodrigues</h1>
+            <h3 style= "color: white">Software Development | Robotics | Computer Engineering</h3>
             <hr>
             <ul class="list-inline intro-social-buttons">
               <li>
